data/issues_raw/buildinstall/buildinstall_train_6777.txt
Compiled fails on Ubuntu 16.04 server

Hi, there,
I compiled the latest v1.0.0-alpha version on a Ubuntu 16.04 server with GPU support. Here is the error I got:
/home/xxu/Extern/tensorflow/tensorflow/core/kernels/BUILD:863:1: error while parsing .d file: /home/xxu/.cache/bazel/_bazel_xxu/09a841ffbaae1d24115959abeaae27c9/execroot/tensorflow/bazel-out/local_linux-opt/bin/tensorflow/core/kernels/_objs/gather_functor_gpu/tensorflow/core/kernels/gather_functor_gpu.cu.pic.d (No such file or directory).
In file included from ./tensorflow/core/framework/register_types.h:21:0,
                 from ./tensorflow/core/kernels/gather_functor_gpu.cu.h:23,
                 from tensorflow/core/kernels/gather_functor_gpu.cu.cc:20:
bazel-out/local_linux-opt/genfiles/tensorflow/core/framework/resource_handle.pb.h:12:2: error: #error This file was generated by a newer version of protoc which is
 #error This file was generated by a newer version of protoc which is
  ^
bazel-out/local_linux-opt/genfiles/tensorflow/core/framework/resource_handle.pb.h:13:2: error: #error incompatible with your Protocol Buffer headers. Please update
 #error incompatible with your Protocol Buffer headers.  Please update
  ^
bazel-out/local_linux-opt/genfiles/tensorflow/core/framework/resource_handle.pb.h:14:2: error: #error your headers.
 #error your headers.
  ^
Target //tensorflow/tools/pip_package:build_pip_package failed to build

Versions of packages:

The protoc --version is 3.1.0. I installed both C++ and python version;
CUDA 7.5, cudnn 5

PS: I compile it without cuda and everything goes well.